@@ -546,15 +546,14 @@ typedef struct _PROCESS_MITIGATION_POLICY_INFORMATION
     union
     {
         PROCESS_MITIGATION_ASLR_POLICY ASLRPolicy;
-        PROCESS_MITIGATION_DEP_POLICY DEPPolicy;
         PROCESS_MITIGATION_STRICT_HANDLE_CHECK_POLICY StrictHandleCheckPolicy;
         PROCESS_MITIGATION_SYSTEM_CALL_DISABLE_POLICY SystemCallDisablePolicy;
         PROCESS_MITIGATION_EXTENSION_POINT_DISABLE_POLICY ExtensionPointDisablePolicy;
         PROCESS_MITIGATION_DYNAMIC_CODE_POLICY DynamicCodePolicy;
         PROCESS_MITIGATION_CONTROL_FLOW_GUARD_POLICY ControlFlowGuardPolicy;
-        PROCESS_MITIGATION_BINARY_SIGNATURE_POLICY SignaturePolicy;
-        PROCESS_MITIGATION_FONT_DISABLE_POLICY FontPolicy;
-        PROCESS_MITIGATION_IMAGE_LOAD_POLICY ImagePolicy;
+        PROCESS_MITIGATION_BINARY_SIGNATURE_POLICY BinarySignaturePolicy;
+        PROCESS_MITIGATION_FONT_DISABLE_POLICY FontDisablePolicy;
+        PROCESS_MITIGATION_IMAGE_LOAD_POLICY ImageLoadPolicy;
     };
 } PROCESS_MITIGATION_POLICY_INFORMATION, *PPROCESS_MITIGATION_POLICY_INFORMATION;
 
