@@ -3,6 +3,7 @@ Process Hacker
 2.38
  * HIGHLIGHTS:
  * OTHER CHANGES:
+   * Fixed ASLR state being shown as N/A in process properties
    * Updated UserNotes plugin:
      * Added "Collapse by Default" option for processes
 
